--- a/web/robotjs/client/styles/style.css
+++ b/web/robotjs/client/styles/style.css
@@ -1,7 +1,19 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+.disable-select {
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
+}
+div {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+span {
+  -webkit-tap-highlight-color: rgba(255,255,255,0.3);
 
+}
 body {
   padding: 30px 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -12,131 +24,168 @@ body {
 a {
   color: #00B7FF;
 }
- 
+
 h1 {
-    text-align: center;
-}
-canvas {
-    border: 1px solid black;
-}
-div.controls {
-    display: block;
-    padding: 5px;
-    width: 450px;
-    margin: 0 auto;
+  text-align: center;
 }
 
-.controls>div { 
-    display: block;
-    float: left;
-    width: 200px;
-    border: 2px solid tomato;
-    padding: 13px;
-    text-align: center;
-    border-radius: 20px;
+canvas {
+  border: 1px solid black;
+}
+
+div.controls {
+  display: block;
+  padding: 5px;
+  width: 450px;
+  margin: 0 auto;
+}
+
+.controls>div {
+  display: block;
+  float: left;
+  width: 200px;
+  border: 2px solid tomato;
+  padding: 13px;
+  text-align: center;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+.controls>div>span {
+    cursor: pointer;
+}
+#move-speed {
+    cursor: pointer;
 }
 
 .arrow {
-    position: relative;
-    display: inline-block;
-    background-image: url(../images/arrow.jpg);
-    background-size: 50px 50px;
-    width: 50px;
-    height: 50px;
-    margin: 5px 0;
+  position: relative;
+  display: inline-block;
+  background-image: url(../images/arrow.jpg);
+  background-size: 50px 50px;
+  width: 50px;
+  height: 50px;
+  margin: 5px 0;
 }
 
 .reset {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    background-image: url(../images/reset.png);
-    background-size: 50px 50px;
-    margin: 5px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/reset.png);
+  background-size: 50px 50px;
+  margin: 5px;
 }
+
 .reset:active {
-    /*background-size: 53px 53px;*/
-    transform: scale(1.2);
+  /*background-size: 53px 53px;*/
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .up-left {
-    transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
 }
+
 .up-left:active {
-    transform: scale(1.2) rotate(-135deg);
+  -webkit-transform: scale(1.2) rotate(-135deg);
+          transform: scale(1.2) rotate(-135deg);
 }
 
 .up {
-    transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
-.up:active {
-    transform: rotate(-90deg) scale(1.2);
 
+.up:active {
+  -webkit-transform: rotate(-90deg) scale(1.2);
+          transform: rotate(-90deg) scale(1.2);
 }
+
 .up-right {
-    transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
+
 .up-right:active {
-    transform: rotate(-45deg) scale(1.2); 
+  -webkit-transform: rotate(-45deg) scale(1.2);
+          transform: rotate(-45deg) scale(1.2);
 }
+
 .right:active {
-    transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .right-down {
-    transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
+
 .right-down:active {
-    transform: rotate(45deg) scale(1.2); 
+  -webkit-transform: rotate(45deg) scale(1.2);
+          transform: rotate(45deg) scale(1.2);
 }
 
 .down {
-    transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
+
 .down:active {
-    transform: rotate(90deg) scale(1.2); 
+  -webkit-transform: rotate(90deg) scale(1.2);
+          transform: rotate(90deg) scale(1.2);
 }
 
 .left-down {
-    transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
+
 .left-down:active {
-    transform: rotate(135deg) scale(1.2); 
+  -webkit-transform: rotate(135deg) scale(1.2);
+          transform: rotate(135deg) scale(1.2);
 }
+
 .left {
-    transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
+
 .left:active {
-    transform: rotate(180deg) scale(1.2); 
+  -webkit-transform: rotate(180deg) scale(1.2);
+          transform: rotate(180deg) scale(1.2);
 }
+
 div.rotate {
-    height: 219px;
-    margin-left: 20px;
-    padding-top: 80px;
+  height: 219px;
+  margin-left: 20px;
+  padding-top: 80px;
 }
+
 .rotate>span {
-    display: inline-block;
-    background-size: contain;
-    width: 50px;
-    height: 50px;
+  display: inline-block;
+  background-size: contain;
+  width: 50px;
+  height: 50px;
 }
+
 .clock-wise {
-    background-image: url(../images/clock-wise.svg);
-    transform: rotate(-90deg);
+  background-image: url(../images/clock-wise.svg);
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
+
 .clock-wise:active {
-    transform: rotate(-90deg) scale(1.2);
+  -webkit-transform: rotate(-90deg) scale(1.2);
+          transform: rotate(-90deg) scale(1.2);
 }
 
 .unclock-wise {
-    background-image: url(../images/unclock-wise.svg);
+  background-image: url(../images/unclock-wise.svg);
 }
+
 .unclock-wise:active {
-    transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
-
-
-
-
-
-
